--- a/admin_system/src/components/header/header.less
+++ b/admin_system/src/components/header/header.less
@@ -1,22 +1,47 @@
 .layoutHeader{
     background-color: #fff;
+    height: 80px;
     .headerTop{
         border-bottom:1px solid #1da57a;
         text-align: right;
+        height:40px;
         line-height: 40px;
         padding-right:30px;
+        span {
+            margin-right: 10px;
+          }
     }
     .headerBottom{
         height:40px;
         display: flex;
         align-items: center;
-        .headerBottomRight{
+        .headerBottomLeft{
+          position: relative;
           width: 25%;
           text-align: center;
+          font-size: 20px;
+          line-height: 40px;
+          &::after{
+              position: absolute;
+              right: 50%;
+              top: 100%;
+              transform: translateX(50%);
+              content: "";
+              border-top: 20px solid white;
+              border-right: 20px solid transparent;
+              border-bottom: 20px solid transparent;
+              border-left: 20px solid transparent;
+          }
         }
-        .headerBottomLeft{
+        .headerBottomRight{
             width: 75%;
             text-align: right;
+            margin-right: 30px;
+            img{
+                margin:0 15px;
+                width: 30px;
+                height: 20px;
+            }
         }
     }
 }
